src/objects/User.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__Account_ID__c</fullName>
        <label>Account ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Account__c</fullName>
        <formula>if(IsBlank(Contact.Account.Name), BMCServiceDesk__Account_Name__c, Contact.Account.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AssetManagementView__c</fullName>
        <label>Asset Management View</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hidden</fullName>
                    <default>true</default>
                    <label>Hidden</label>
                </value>
                <value>
                    <fullName>Read-Only</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Update and Delete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__AssignRemedyforceLic__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this check box to assign Remedyforce seat license.</inlineHelpText>
        <label>Assign Remedyforce License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Broadcast_ticker_speed__c</fullName>
        <inlineHelpText>Enter a value between 1 and 10,where 1=Slow and 10=Fast</inlineHelpText>
        <label>Broadcast ticker speed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                    <default>true</default>
                    <label>5</label>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Building__c</fullName>
        <label>Building</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Business_Hours_ID__c</fullName>
        <label>Business Hours ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Business_Hours__c</fullName>
        <inlineHelpText>Select the shift in which the staff member works.</inlineHelpText>
        <label>Business Hours</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CIManagementView__c</fullName>
        <label>CI Management View</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hidden</fullName>
                </value>
                <value>
                    <fullName>Read-Only</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Update and Delete</fullName>
                    <default>true</default>
                    <label>Update and Delete</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ChatStatus__c</fullName>
        <inlineHelpText>Select the chat status.</inlineHelpText>
        <label>Chat Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Busy</fullName>
                </value>
                <value>
                    <fullName>Offline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ContactId__c</fullName>
        <label>ContactId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__EnableChat__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this check box to enable the user to chat.</inlineHelpText>
        <label>Enable Chat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Extension__c</fullName>
        <formula>Extension</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extension</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FPLoginID__c</fullName>
        <inlineHelpText>This field stores the Login ID of the validated BMC FootPrints Asset Core user.</inlineHelpText>
        <label>BCM Login ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FP_Login_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BCM Login Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ImageName__c</fullName>
        <label>Image Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IsOutOfOffice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out of Office</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IsRemedyforceAdministrator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remedyforce Administrator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__IsStaffUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ServiceDesk Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LastAvailableTime__c</fullName>
        <inlineHelpText>Displays the last time when the user Status was Available.</inlineHelpText>
        <label>Last Available Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LastChatEndTime__c</fullName>
        <inlineHelpText>Displays the time when the last chat ended.</inlineHelpText>
        <label>Last Chat End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Manage_QV__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables staff members to create and manage QuickViews in the Remedyforce Console.</description>
        <label>Manage QuickViews</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Manage_ServiceDesk_Staff_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manage ServiceDesk Staff Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Note__c</fullName>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Picture__c</fullName>
        <formula>IMAGE(&quot;/resource/&quot; + BMCServiceDesk__ImageName__c ,  FirstName + &quot; &quot; + LastName, 80, 80 )</formula>
        <label>Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Remedyforce_Casual_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remedyforce Casual User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Remedyforce_Knowledge_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remedyforce Knowledge User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Room__c</fullName>
        <label>Room</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Schedule_CR_and_Blackouts_During_Overlap__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Allows to schedule change requests during a blackout and create a blackout when change requests exists for that duration.</inlineHelpText>
        <label>Override Blackouts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SelfService_Preferences__c</fullName>
        <description>SelfService user preference settings</description>
        <label>SelfService Preferences</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__UniqueUserIDInSource__c</fullName>
        <description>This is the unique field which identifies the user in the source object from where the user is getting imported. This is usually the LDAP or AD username or any other similar identifier</description>
        <externalId>true</externalId>
        <label>Unique User ID in Source</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__User_License__c</fullName>
        <formula>Profile.UserLicense.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User License</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__VIP__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates if the user is VIP.</inlineHelpText>
        <label>VIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__pager__c</fullName>
        <label>Pager</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__remarks__c</fullName>
        <label>Remarks</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__skipQVWizIntro__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Skip QV Wizard Introduction screen</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>ServiceDesk System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <columns>BMCServiceDesk__Account_ID__c</columns>
        <columns>BMCServiceDesk__Account_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>ServiceDesk_Clients</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>ServiceDesk Client</value>
        </filters>
        <label>ServiceDesk Client</label>
    </listViews>
    <listViews>
        <fullName>ServiceDesk_Clients_innovage_org</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>ServiceDesk Client</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>contains</operation>
            <value>innovage.org</value>
        </filters>
        <label>ServiceDesk Client - innovage.org</label>
    </listViews>
    <listViews>
        <fullName>ServiceDesk_Staff</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>BMCServiceDesk__Account_Name__c</columns>
        <columns>BMCServiceDesk__Account_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>ServiceDesk Staff</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>ServiceDesk Staff</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>BMCServiceDesk__Validate_FootPrints_Login</fullName>
        <active>false</active>
        <description>Enable this validation rule to prevent users from editing the BMC Client Management Login ID. However, the users can delete the BMC Client Management Login ID.</description>
        <errorConditionFormula>IF(NOT(ISCHANGED(BMCServiceDesk__FPLoginID__c) ), false, IF(ISBLANK( BMCServiceDesk__FPLoginID__c), false, IF(BMCServiceDesk__FP_Login_Validated__c,false, true)))</errorConditionFormula>
        <errorMessage>You can delete a BMC Client Management Login ID from here but you cannot edit it.</errorMessage>
    </validationRules>
</CustomObject>